reports + hide parents
