# apps/web-ui/src/app/services/accounting-api-service/models.ts
@@ -1,10 +1,9 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { AccountBalanceNode } from './models/account-balance-node';
 export type { AccountStatus } from './models/account-status';
 export type { Entry } from './models/entry';
 export type { ErrorResponse } from './models/error-response';
 export type { LedgerAccount } from './models/ledger-account';
 export type { Posting } from './models/posting';
-export type { Transaction } from './models/transaction';
-export type { TransactionEntry } from './models/transaction-entry';
