# apps/web-ui/src/app/services/accounting-api-service/models/account-balance-node.ts
@@ -1,0 +1,12 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface AccountBalanceNode {
+  credit: string;
+  debit: string;
+  ledger_account_id: string;
+  name: string;
+  parent_id: string | null;
+  total_credit: string;
+  total_debit: string;
+}
