# apps/web-ui/src/app/services/accounting-api-service/models/transaction-entry.ts
@@ -1,24 +1,0 @@
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-
-/**
- * Double-entry accounting entry - debit / credit
- */
-export interface TransactionEntry {
-
-  /**
-   * ...
-   */
-  credit_amount: string;
-
-  /**
-   * ...
-   */
-  debit_amount: string;
-
-  /**
-   * transaction id
-   */
-  transaction_id: string;
-}
