# apps/web-ui/src/app/services/accounting-api-service/models/transaction.ts
@@ -1,14 +1,0 @@
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-import { TransactionEntry } from '../models/transaction-entry';
-
-/**
- * Double-entry accounting transaction
- */
-export interface Transaction {
-  date: string;
-  description: string;
-  entries: Array<TransactionEntry>;
-  id?: string;
-}
